@@ -195,9 +195,13 @@ namespace Rcpp{
 #endif
 
 #if RCPP_DEBUG_LEVEL > 0
-	#define RCPP_DEBUG( fmt , ... ) Rprintf( "%s:%d " fmt "\n" , __FILE__, __LINE__,##__VA_ARGS__ ) ;
+	#define RCPP_DEBUG( MSG ) Rprintf( "%s:%d %s" , __FILE__, __LINE__, MSG ) ;
+	#define RCPP_DEBUG_1( fmt, MSG ) Rprintf( "%s:%d " fmt "%s" , __FILE__, __LINE__, MSG ) ;
+	#define RCPP_DEBUG_2( fmt, M1, M2 ) Rprintf( "%s:%d " fmt "%s" , __FILE__, __LINE__, M1, M2 ) ;
 #else
-	#define RCPP_DEBUG( fmt , ... )
+	#define RCPP_DEBUG( MSG )
+	#define RCPP_DEBUG_1( fmt, MSG )
+	#define RCPP_DEBUG_2( fmt, M1, M2 )
 #endif
 
 SEXP stack_trace( const char *file, int line) ;
