@@ -1,3 +1,7 @@
+2010-07-05  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/RcppCommon.h : no more using variadic macros in RCPP_DEBUG
+
 2010-07-02  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/traits/result_of.h : also deal with functions
